src/routes/voicechat/style.module.css
.voicechat {
  justify-content: space-between;
  padding-top: 65px;
  margin: 0px 20%;
  min-height: 100%;
}

.btn-jl {
  height: 40px;
  font-size: 24px;
  margin-left: 10px;
}

.username {
  display: flex;
  height: 50px;
  font-size: 30px;
}
.transparent {
  background: transparent !important;
  transition: background 0.4s linear;
  /* background: black; */
}

.username input {
  font: inherit;
  padding-left: 10px;
  width: 250px;
}

.userlist {
  font-size: 16px;
  list-style: none;
  border: 1px solid;
  width: 150px;
  /* height: 400px; */
}



@media (max-width: 768px) {
  .voicechat {
    margin: 0px 5%;
  }
  .username {
    display: block;
  }
  .username input {
    width: 100%;
    padding-left: 0px;
  }
  .btn-jl {
    height: 40px;
    width: 100%;
    font-size: 24px;
    margin-top: 10px;
    margin-left: 0px;
  }
  .userlist {
    margin-top: 100px;
    width: 100%;
  }
}

.chatinput {
  width: 100%;
}
.chatinput input{
  width: 100%;
}
.chatlog {
  list-style: none;
  width: 100%
}
.chatlog li{
  border: 1px solid;
  padding: 10px;
}

